include_directories(./../headerFiles)
add_executable(calculator calculatorTest.cpp calculator.cpp)
add_executable(bracket bracketCheck.cpp)
add_executable(convert systemConvert.cpp)
add_executable(queueMerge queueMerge.cpp)
add_executable(bankCallingSystem bankCallingSystem/caller.cpp bankCallingSystem/callTest.cpp)