include_directories(./../headerFiles)
add_executable(calculator calculatorTest.cpp calculator.cpp)
add_executable(bracket bracketCheck.cpp)
add_executable(convert systemConvert.cpp)
add_executable(queueMerge queueMerge.cpp)
add_executable(stringCmp stringCmp.cpp stringCmpTest.cpp)
add_executable(reverseStrCmp reverseStrCmp.cpp ../kmpString.cpp)
add_executable(bankCallingSystem bankCallingSystem/caller.cpp bankCallingSystem/callTest.cpp)
add_executable(textEditor textEditor/test.cpp textEditor/TextField.cpp ../kmpString.cpp textEditor/Editor.cpp)